Renaming coreCount config option to max-threads Updating to use ProcessBuilder instead of Runtime.exec Will now attempt to use RELEASE version of OverSim by default. If using DEBUG version the user is prompted to ensure they mean to do so.