@@ -1,14 +1,17 @@
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Properties;
 import java.util.Queue;
+import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -38,20 +41,25 @@ public class Manager {
 			HashMap<String, String> parameters = new HashMap<String, String>();
 
 			// Count how many available cores we should use (max)
-			int coreCount = Runtime.getRuntime().availableProcessors();
-			if (config.containsKey("coreCount")) {
-				int overrideCoreCount = Integer.parseInt(config.getProperty("coreCount"));
-				if (overrideCoreCount > coreCount)
-					throw new RuntimeException("coreCount(" + overrideCoreCount + ") in config is higher than real coreCount(" + coreCount + "). This is a bad idea!");
+			int maxThreads = Runtime.getRuntime().availableProcessors();
+			if (config.containsKey("max-threads")) {
+				try {
+					int overrideCoreCount = Integer.parseInt(config.getProperty("coreCount"));
+					if (overrideCoreCount > maxThreads)
+						throw new RuntimeException("max threads (" + overrideCoreCount + ") in config is higher than phyiscal core count (" + maxThreads + "). This is a bad idea!");
 
-				coreCount = overrideCoreCount;
+					maxThreads = overrideCoreCount;
+				}
+				catch (NumberFormatException e) {
+					throw new RuntimeException("Malformed configuration, max-threads must be an integer!");
+				}
 			}
 
 			// Set the working directory and config file
 			File workingDir = new File(config.getProperty("working-dir", "."));
 			String configFile = config.getProperty("config-file", "omnetpp.ini");
 
-			Manager manager = new Manager(coreCount, workingDir, configFile, configName, parameters);
+			Manager manager = new Manager(maxThreads, workingDir, configFile, configName, parameters);
 			manager.start();
 		}
 		catch (IOException e) {
@@ -62,15 +70,54 @@ public class Manager {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		catch (NumberFormatException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+		catch (RuntimeException e) {
+			System.out.println(e.getMessage());
+			System.exit(1);
 		}
 	}
 
-	public static int countRuns(File workingDir, String configFile, String configName) throws IOException
+	public static File findOverSim(File workingDir) throws FileNotFoundException {
+		File release = new File(workingDir, "../out/gcc-release/src/OverSim");
+		if (release.exists()) {
+			System.out.println("Using OverSim in RELEASE mode.");
+			return release;
+		}
+
+		File debug = new File(workingDir, "../out/gcc-debug/src/OverSim");
+		if (debug.exists()) {
+			System.out.println("Using OverSim in DEBUG mode.");
+
+			Scanner scanner = new Scanner(System.in);
+			System.out.print("This will be slow! Are you sure you wish to continue? [y/n]: ");
+
+			try {
+				String response = scanner.next();
+				if (!response.equalsIgnoreCase("y") && !response.equalsIgnoreCase("yes"))
+					throw new RuntimeException("Simulations cancelled.");
+			}
+			finally {
+				scanner.close();
+			}
+
+			return debug;
+		}
+
+		File link = new File(workingDir, "../src/OverSim");
+		if (link.exists())
+			return link;
+
+		throw new FileNotFoundException("Unable to locate OverSim executable.");
+	}
+
+	public int countRuns(String configFile, String configName) throws IOException
 	{
-		Process process = Runtime.getRuntime().exec("../src/OverSim -f" + configFile + " -x" + configName, null, workingDir);
+		List<String> command = new LinkedList<String>();
+
+		command.add(overSim.getAbsolutePath());
+		command.add("-f" + configFile);
+		command.add("-x" + configName);
+
+		Process process = new ProcessBuilder(command).directory(workingDir).start();
 
 		BufferedReader in = null;
 		int runs = 0;
@@ -96,18 +143,20 @@ public class Manager {
 		return runs;
 	}
 
+	protected final File overSim;
 	protected final File workingDir;
 	protected final File resultRootDir;
 	protected final File resultDir;
+	protected final File logDir;
 	protected final HashMap<String, String> parameters;
 	protected final List<SimulationThread> threads;
 	protected boolean finished;
 
-	public Manager(int processCount, File workingDir, String configFile, String configName) throws IOException {
-		this (processCount, workingDir, configFile, configName, new HashMap<String, String>());
+	public Manager(int maxThreads, File workingDir, String configFile, String configName) throws IOException {
+		this (maxThreads, workingDir, configFile, configName, new HashMap<String, String>());
 	}
 
-	public Manager(int processCount, File workingDir, String configFile, String configName, HashMap<String, String> parameters) throws IOException {
+	public Manager(int maxThreads, File workingDir, String configFile, String configName, HashMap<String, String> parameters) throws IOException {
 		this.workingDir = workingDir;
 		this.parameters = parameters;
 
@@ -123,33 +172,41 @@ public class Manager {
 
 		parameters.put("result-dir", resultDir.getAbsolutePath());
 
-		threads = new ArrayList<SimulationThread>(processCount);
+		logDir = new File(resultDir, "logs");
+		if (!logDir.mkdir())
+			throw new RuntimeException("Unable to create logs subdirectory.");
 
-		int totalRunCount = Manager.countRuns(workingDir, configFile, configName); // Fetch the total run count
+		// Find OverSim - attempt to use the RELEASE version by default
+		overSim = Manager.findOverSim(workingDir);
+
+		int totalRunCount = this.countRuns(configFile, configName); // Fetch the total run count
 		if (totalRunCount == 0)
 			throw new RuntimeException("Invalid config name, 0 runs found.");
 
-		int perProcess = (int) Math.ceil((double)totalRunCount / (double)processCount);
+		// Check we don't have more threads than we need
+		if (maxThreads > totalRunCount)
+			maxThreads = totalRunCount;
+
+		threads = new ArrayList<SimulationThread>(maxThreads);
+
+		// Calculate how many runs we should do per thread
+		int perThread = (int) Math.ceil((double)totalRunCount / (double)maxThreads);
 		List<SimulationRun> totalRuns = new ArrayList<SimulationRun>(totalRunCount);
 
 		// Create the list of simulation runs
 		for (int i = 0;i < totalRunCount;i++) {
-			SimulationRun run = new SimulationRun(configFile, configName, i);
+			SimulationRun run = new SimulationRun(configFile, configName, i, logDir);
 			totalRuns.add(run);
 		}
 
 		// Shuffle the list so that we don't end up with all similar runs in the same thread
 		Collections.shuffle(totalRuns);
 
-		// Check we don't have more threads than we need
-		if (processCount > totalRunCount)
-			processCount = totalRunCount;
-
-		for (int i = 0;i < processCount;i++)
+		for (int i = 0;i < maxThreads;i++)
 		{
-			int runCount = perProcess > totalRuns.size() ? totalRuns.size() : perProcess; // Check how many to delegate
+			int runCount = perThread > totalRuns.size() ? totalRuns.size() : perThread; // Check how many to delegate
 
-			SimulationThread thread = new SimulationThread(this, workingDir, parameters);
+			SimulationThread thread = new SimulationThread(this, workingDir, parameters, overSim);
 
 			// Add runs to be handled by this thread
 			for (int j = 0;j < runCount;j++)
