@@ -1,6 +1,12 @@
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.PrintWriter;
 import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
 import java.util.Map;
 
 public class SimulationRun {
@@ -8,29 +14,59 @@ public class SimulationRun {
 	protected final String configFile;
 	protected final String configName;
 	protected final int runID;
+	protected final File logDir;
 
-	public SimulationRun(String configFile, String configName, int runID) {
+	public SimulationRun(String configFile, String configName, int runID, File logDir) {
 		this.configFile = configFile;
 		this.configName = configName;
 		this.runID = runID;
+		this.logDir = logDir;
 	}
 
-	public int run(File workingDir, HashMap<String, String> parameters) throws IOException, InterruptedException {
-		String[] cmd = new String[5 + parameters.size()];
-		int index = 0;
+	public int run(File workingDir, HashMap<String, String> parameters, File overSim) throws IOException, InterruptedException {
+		List<String> command = new LinkedList<String>();
 
-		cmd[index++] = "../src/OverSim";
-		cmd[index++] = "-f" + configFile;
-		cmd[index++] = "-c" + configName;
-		cmd[index++] = "-uCmdenv";
-		cmd[index++] = "-r" + runID;
+		command.add(overSim.getAbsolutePath());
+		command.add("-f" + configFile);
+		command.add("-c" + configName);
+		command.add("-uCmdenv");
+		command.add("-r" + runID);
 
 		// Append any special parameters
 		for (Map.Entry<String, String> entry : parameters.entrySet())
-			cmd[index++] = "--" + entry.getKey() + "=" + entry.getValue();
+			command.add("--" + entry.getKey() + "=" + entry.getValue());
 
 		// Execute OverSim
-		Process process = Runtime.getRuntime().exec(cmd, null, workingDir);
+		ProcessBuilder processBuilder = new ProcessBuilder(command);
+		processBuilder.directory(workingDir);
+		processBuilder.redirectErrorStream(true);
+
+		Process process = processBuilder.start();
+
+		// If we have a log directory then lets save a log
+		if (logDir != null) {
+			File logFile = new File(logDir, "run" + runID + ".log");
+
+			BufferedReader in = null;
+			PrintWriter out = null;
+
+			try {
+				in = new BufferedReader(new InputStreamReader(process.getInputStream()));
+				out = new PrintWriter(new FileWriter(logFile), true);
+
+				for (String line;(line = in.readLine()) != null;)
+					out.println(line);
+			}
+			finally {
+				if (in != null)
+					in.close();
+
+				if (out != null)
+					out.close();
+			}
+		}
+
+		// Wait for the process to end (if we were logging it already has, but thats fine)
 		return process.waitFor();
 	}
 
